# wayback-impersonator

./: CONTRIBUTING.md  Cargo.toml  InRelease  LICENSE  README.md  Release  Release.gpg  archive-key.asc  archive-key.gpg  index.html
.github/workflows/: deploy.yml
amd64/: InRelease  Packages  Release  Release.gpg  wayback-impersonator_0.1.1-1_amd64.deb  wayback_0.1.2-1_amd64.deb  wayback_0.1.3-1_amd64.deb  wayback_0.1.4-1_amd64.deb  wayback_0.1.4-1_amd64.deb.asc  wayback_0.1.5-1_amd64.deb  wayback_0.1.5-1_amd64.deb.asc  wayback_0.1.6-1_amd64.deb  wayback_0.1.6-1_amd64.deb.asc  wayback_0.1.7-1_amd64.deb  wayback_0.1.7-1_amd64.deb.asc  wayback_0.1.8-1_amd64.deb  wayback_0.1.8-1_amd64.deb.asc  wayback_0.1.9-1_amd64.deb  wayback_0.1.9-1_amd64.deb.asc  wayback_1.0.0-1_amd64.deb  wayback_1.0.0-1_amd64.deb.asc
debian/: changelog  copyright  wayback.1  wayback.bash-completion  wayback.fish  wayback.zsh
src/: lib.rs  main.rs
