[package]
name = "wayback-impersonator"
version = "0.1.5"
edition = "2024"

[dependencies]
impersonate-rs = "0.1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
flate2 = "1.0"
brotli = "6.0"

[package.metadata.deb]
name = "wayback"
maintainer = "Alexander Salas Bastidas <ajsb85@firechip.dev>"
assets = [
    ["target/release/wayback-impersonator", "/usr/bin/wayback", "755"],
]
